kubernetes/apps/databases/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx
  annotations:
    hajimari.io/icon: simple-icons:mqtt
spec:
  ingressClassName: internal
  rules:
    - host: &host emqx.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
        - *host
